# gl2tp

./: .gitignore  AUTHORS  Makefile.am  autogen.sh  configure.ac
icons/: Makefile.am
po/: Makevars  POTFILES.in  zh_CN.po
src/: Makefile.am  gl2tp  gl2tp.c  gl2tp.h  gl2tp_icon.h  l2tpclient.c  l2tpclient.h  main.c
